@@ -21,8 +21,6 @@
 <!-- toolbar -->
 <div id="messagetoolbar" class="toolbar">
 	<roundcube:button command="checkmail" type="link" class="button checkmail disabled" classAct="button checkmail" classSel="button checkmail pressed" label="refresh" title="checkmail" />
-	<roundcube:button command="compose" type="link" class="button compose disabled" classAct="button compose" classSel="button compose pressed" label="compose" title="writenewmessage" />
-	<span class="spacer"></span>
 	<roundcube:include file="/includes/mailtoolbar.html" />
 </div>
 
